--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -4,7 +4,7 @@
     background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
-    align-items: center;
+
 
 
     &__intro {
@@ -246,7 +246,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-   
+
     }
 
     &__trial-title-wrapper {
@@ -268,7 +268,7 @@
         padding: 10px;
         margin-left: 50px;
 
-        &:focus{
+        &:focus {
             border: 1px solid #d85b53;
         }
     }
@@ -279,7 +279,13 @@
         border: 0;
         margin-right: 15px;
 
-    
+        &:focus {
+            outline: none;
+          
+        }
+
+
+
     }
 
 
@@ -291,7 +297,7 @@
     flex-direction: column;
     border-radius: 10px;
     padding: 25px 0px;
-    margin: 0px 150px;
+    margin: 150px 150px;
 
 
     &__title-box {
@@ -304,6 +310,7 @@
 
     &__title {
         color: white;
+        margin: 50px 0px;
 
         &--section {
             font-size: 40px;
@@ -374,15 +381,21 @@
     flex-direction: column;
     border-radius: 10px;
     padding: 25px 0px;
-    margin: 0px 150px;
+    margin: 100px 150px;
 
+    &__sub-title {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 50px 0px;
+    }
 
     &__title-box {
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-end;
+        flex-direction: column;
+        align-items: center;
         width: 100%;
+        margin-bottom: 50px;
     }
 
     &__title {
@@ -457,20 +470,22 @@
     flex-direction: column;
     border-radius: 10px;
     padding: 25px 0px;
-    margin: 0px 150px;
+    margin: 100px 150px;
+
 
     &__sub-title {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        margin: 50px 0px;
     }
 
     &__title-box {
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-end;
+        flex-direction: column;
+        align-items: center;
         width: 100%;
+        margin: 50px 0px;
     }
 
     &__title {
