--- a/src/components/UI/Button.scss
+++ b/src/components/UI/Button.scss
@@ -1,8 +1,9 @@
 .button {
+  background-color: rgb(216, 91, 83,0.7);
   align-items: center;
   border: none;
   box-sizing: border-box;
-  color: #000;
+  color: white;
   cursor: pointer;
   display: inline-flex;
   font-family: Inter, sans-serif;
@@ -14,14 +15,14 @@
   line-height: 24px;
   min-width: 20px;
   outline: 0;
-  padding: 0 10px;
+  padding: 5px 10px;
   text-align: center;
   text-decoration: none;
   transition: all 0.3s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  border-radius: 15px;
+  border-radius: 5px;
 
   &:hover,
   &:focus {
@@ -33,8 +34,9 @@
     color: #fff;
     background: rgba(66, 65, 65, 0.2);
     font-size: 15px;
-    width: 150px;
-    border: 1px solid rgba(88, 86, 86);
+    width: 170px;
+    height: 60px;
+    border: 1px dashed rgb(216, 91, 83);
     padding: 12px 26px;
     border-radius: 50px;
 
