--- a/src/pages/Movies/PopMovieList.scss
+++ b/src/pages/Movies/PopMovieList.scss
@@ -189,8 +189,9 @@
     }
 
     &__title-overlay {
-     display: none;
-    }
+      display: none;
+     }
+ 
 
     &__background-responsive {
       width: 100%;
@@ -598,4 +599,48 @@
       font-size: 8rem;
     }
   }
+
+  @media only screen and (min-width: 820px) and (max-width: 912px) and (min-height: 1180px) and (max-height: 1368px) {
+
+    &__f-d-container {
+      width: 100%;
+      height: 50%;
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.6) 50%, rgba(0, 0, 0, 0.5) 75%, rgba(0, 0, 0, 0.4) 80%, transparent 100%);
+    }
+
+    &__slider-container {
+      margin-right: 0px;
+
+    }
+
+    &__details {
+      font-size: 10px;
+    }
+
+    &__title {
+      font-size: 20px;
+    }
+
+    &__overview {
+      font-size: 15px;
+      line-height: 25px;
+    }
+
+    &__img {
+      width: 70px;
+    }
+
+    &__icon {
+      width: 17px;
+      height: auto;
+      padding: 5px;
+    }
+
+    &__selected-title {
+      margin: 0px 75px;
+      font-size: 5rem;
+    }
+
+  }
+  
 }
